@startuml application-architecture
!define PRESENTATION_LAYER #E3F2FD
!define BUSINESS_LAYER #F3E5F5
!define DATA_LAYER #E8F5E9
!define EXTERNAL #FFF3E0


skinparam component {
    BackgroundColor<<Presentation>> PRESENTATION_LAYER
    BackgroundColor<<Business>> BUSINESS_LAYER
    BackgroundColor<<Data>> DATA_LAYER
    BackgroundColor<<External>> EXTERNAL
    BorderColor #333333
    ArrowColor #333333
}

title TOGAF Application Architecture - FinPulse Fintech Platform

package "Presentation Layer" <<Presentation>> {
    component "apps/admin" as AdminApp {
        component "React 19 + Vite" as AdminVite {
            component "React Router" as AppRouter
            component "Components" as Components
            component "Pages (Dashboard, Portfolio, Behavior)" as Services
            component "Layout (Sidebar, Header)" as Layout
        }
    }

    component "apps/portal" as PortalApp {
        component "React 19 + Vite" as PortalVite {
            component "App Router" as PortalRouter
            component "Components" as PortalComponents
            component "Emotion + theme" as PortalTheme
        }
    }

    component "@fintech/analytics" as AnalyticsPkg {
        component "AnalyticsProvider + useAnalytics" as AnalyticsProvider
        component "track / identify" as TrackIdentify
        component "Console / HTTP transport" as AnalyticsTransport
    }

    component "@fintech/ui" as UIComponent {
        component "Base UI" as BaseUI
        component "Radix UI Primitives" as RadixPrimitives
    }

    component "Chart & Grid (Admin)" as ChartLibrariesWeb {
        component "recharts" as ChartJS
        component "ag-grid-react" as AgGrid
    }

    component "apps/mobile" as MobilePortfolio {
        component "Expo + React Native" as ExpoRN
        component "Flat Structure" as FlatStructure {
            component "src/components/" as MobileComponents {
                component "UI Components" as UIRow
                component "Drawer, Modal, Card" as DrawerModalCard
            }
            component "src/hooks/" as MobileHooks
            component "src/store/" as MobileRedux {
                component "Redux slices" as ReduxSlices
                component "QuoteSocketSubscriber" as QuoteSocket
            }
            component "src/lib/" as MobileLib {
                component "API clients (account, auth, blockchain, market, portfolio, risk)" as APIClients
                component "Services (web3Service)" as Services
                component "Config (web3Config)" as Config
            }
            component "src/types/" as MobileTypes {
                component "Domain types (dto)" as DomainTypes
                component "Entity types" as EntityTypes
            }
            component "src/utils/" as MobileUtils {
                component "PeriodDataProcessor" as PeriodProcessor
                component "Format utilities" as Formatters
                component "Stock display" as StockDisplay
            }
            component "src/theme/" as MobileTheme
            component "src/assets/" as MobileAssets
        }
        component "Stocks screen" as StocksScreen {
            component "StockListItem" as StockListItem
            component "NativeSparkline" as NativeSparkline
            component "useSymbolDisplayData" as UseSymbolDisplayData
        }
        component "NativeDemoCard (demo native card)" as NativeDemoCard {
            component "iOS RCTViewManager" as NativeDemoCardIOS
            component "Android SimpleViewManager" as NativeDemoCardAndroid
        }
        component "Native Charts" as NativeCharts {
            component "NativeLineChart" as NLC
            component "NativeCandleChart" as NCC
            component "NativeAmericanLineChart" as NALC
            component "NativeBaselineChart" as NBC
            component "NativeHistogramChart" as NHC
            component "NativeLineOnlyChart" as NLOC
            component "iOS Metal (MTKView)" as NativeChartsIOS
            component "Android OpenGL ES 3" as NativeChartsAndroid
        }
        component "Native chart support (OOP)" as NativeChartSupport {
            component "iOS ChartSupport" as IOSChartSupport
            component "iOS Base Classes" as IOSBaseClasses {
                component "BaseChartViewManager" as IOSBaseViewManager
                component "BaseChartView" as IOSBaseView
                component "BaseChartRenderer" as IOSBaseRenderer
            }
            component "iOS OOP Helpers" as IOSOOPHelpers {
                component "ChartLayoutCalculator" as IOSLayoutCalc
                component "ValueFormatter" as IOSValueFormatter
                component "AxisLabelManager" as IOSAxisManager
                component "ChartDataCalculator" as IOSDataCalc
            }
            component "iOS Shared Utils" as IOSSharedUtils {
                component "ChartCurve, ChartVertex" as IOSCurveVertex
                component "ChartPipeline, ChartGrid" as IOSPipelineGrid
                component "ChartThemes" as IOSThemes
            }
            component "Android view/chart/" as AndroidChartPkg
            component "Android OOP Helpers" as AndroidOOPHelpers {
                component "ChartLayoutCalculator" as AndroidLayoutCalc
                component "ValueFormatter" as AndroidValueFormatter
                component "AxisLabelManager" as AndroidAxisManager
                component "HistogramRenderer" as AndroidHistRenderer
            }
        }
        component "Shared chart logic" as SharedChartLogic {
            component "useScrollableChart" as UseScrollableChart
            component "ScrollableChartContainer" as ScrollableChartContainer
            component "chartTooltip" as ChartTooltip
        }
        component "react-native-wagmi-charts" as RNCharts
    }
    note right of MobilePortfolio: Flat directory structure (2026):\nsrc/components/ — UI components\nsrc/hooks/ — React hooks\nsrc/store/ — Redux state (slices, websocket)\nsrc/lib/ — API clients & services\nsrc/types/ — Domain types\nsrc/utils/ — Utilities\nsrc/theme/ — Theming\nsrc/assets/ — Static assets\nTheme: Emotion (@emotion/native), useTheme, primitives, Robinhood-style.
}

package "Business Layer" <<Business>> {
    component "@fintech/utils" as UtilsPkg {
        component "Utils" as Utils
    }

    package "Application Modules (Web)" {
        component "Portfolio Module" as PortfolioModule {
            component "Portfolio Controller" as PortfolioController
            component "Asset Service" as AssetService
        }

        component "Market Module" as MarketModule {
            component "Market Controller" as MarketController
            component "Trend Service" as TrendService
        }

        component "Transaction Module" as TransactionModule {
            component "Transaction Controller" as TransactionController
            component "Transaction Service" as TransactionService
        }

        component "Risk Module" as RiskModule {
            component "Risk Controller" as RiskController
            component "Risk Service" as RiskService
        }
    }
}

package "Data Access Layer" <<Data>> {
    component "HTTP Client" as HttpClient {
        component "Portfolio API Client" as PortfolioAPIClient
        component "Market Data Client" as MarketDataClient
    }

    component "State Management" as StateMgmt {
        component "React state" as AngularServices
        component "React Router" as RxJS
    }
}

package "External Services" <<External>> {
    component "Vercel" as VercelServices {
        component "Vercel Analytics" as Analytics
        component "Vercel Platform" as VercelPlatform
    }

    component "Third-party APIs" as ThirdPartyAPI {
        component "Market Data API" as MarketAPI
        component "Finance API" as FinanceAPI
    }

    component "Go API Gateway (port 8801)" as GoAPIGateway <<External>> {
        component "Auth, Quotes, CRUD" as GoCRUD
        component "Customers, Accounts, User-preferences" as GoIdentity
        component "Instruments, Bonds, Options" as GoInstruments
        component "Portfolios, Positions, Watchlists" as GoPortfolio
        component "Orders, Trades, Cash-transactions, Payments, Settlements" as GoTrading
        component "Market-data, Blockchain" as GoMarket
        component "Proxy analytics to Python" as GoProxy
        note right: Single API entry.\nProxies risk-metrics, analytics, forecast, valuations to Python :8800.
    }

    component "server-python (Portfolio Analytics API)" as PortfolioAnalyticsAPI <<External>> {
        component "FastAPI app (Clean Architecture)" as FastAPIApp
        component "composition.py, container, api/config" as FastAPIStructure
        component "Portfolio aggregate, Quotes" as PortfolioGet
        component "GET /portfolio, POST /seed, risk-summary, asset-allocation" as PortfolioEndpoints
        component "GET /quotes, WebSocket /ws/quotes, /quotes/history" as QuotesGet
        component "MarketDataService + KafkaMarketDataProvider" as MarketDataServiceComponent
        component "AI/ML compute" as AIMLAPI {
            component "Risk-metrics → VaR, compute-batch" as AIML4
        }
        component "Analytics (ClickHouse)" as AnalyticsAPI {
            component "GET /analytics/portfolio-risk" as AnalyticsRisk
            component "GET /analytics/delta-info" as AnalyticsDelta
            component "POST /forecast/model (MLflow)" as ForecastModel
            component "risk-metrics, valuations" as AnalyticsRiskVal
        }
        component "Behavior events (in-memory)" as BehaviorEvents {
            component "POST /analytics/events" as PostEvents
            component "GET /analytics/events" as GetEvents
        }
        component "SQLAlchemy 2.0 + asyncpg + Alembic" as SQLAlchemyStack
        component "TimescaleDB (portfolio + history)" as TimescaleDB
        component "Redis (server-side cache)" as RedisDB
        component "ClickHouse (analytics)" as ClickHouseDB
        component "MinIO (S3, Faust/Spark)" as MinIOStorage
        component "Kafka (portfolio.events)" as KafkaTopic
        component "Kafka (market.quotes.enriched)" as KafkaQuotesTopic
    }

}

interface "Portfolio API" as PortfolioAPI
interface "Market Data API" as MarketDataAPI
interface "Transaction API" as TransactionAPI
interface "Risk API" as RiskAPI

' Mobile portfolio Flat Structure
ExpoRN --> FlatStructure
FlatStructure --> MobileComponents
FlatStructure --> MobileHooks
FlatStructure --> MobileRedux
FlatStructure --> MobileLib
FlatStructure --> MobileTypes
FlatStructure --> MobileUtils
FlatStructure --> MobileTheme
FlatStructure --> MobileAssets
MobileComponents --> UIRow
MobileComponents --> DrawerModalCard
MobileRedux --> ReduxSlices
MobileRedux --> QuoteSocket
MobileLib --> APIClients
MobileLib --> Services
MobileLib --> Config
MobileTypes --> DomainTypes
MobileTypes --> EntityTypes
MobileUtils --> PeriodProcessor
MobileUtils --> Formatters
MobileUtils --> StockDisplay

' Mobile portfolio native views
ExpoRN --> StocksScreen
StocksScreen --> StockListItem
StockListItem --> NativeSparkline
StocksScreen --> UseSymbolDisplayData
ExpoRN --> NativeDemoCard
NativeDemoCard --> NativeDemoCardIOS
NativeDemoCard --> NativeDemoCardAndroid
ExpoRN --> NativeCharts
NativeCharts --> NativeChartSupport
NativeChartSupport --> IOSChartSupport
NativeChartSupport --> IOSBaseClasses
IOSBaseClasses --> IOSBaseViewManager
IOSBaseClasses --> IOSBaseView
IOSBaseClasses --> IOSBaseRenderer
IOSBaseView --> IOSBaseRenderer
NativeChartSupport --> IOSOOPHelpers
IOSOOPHelpers --> IOSLayoutCalc
IOSOOPHelpers --> IOSValueFormatter
IOSOOPHelpers --> IOSAxisManager
IOSOOPHelpers --> IOSDataCalc
NativeChartSupport --> IOSSharedUtils
IOSSharedUtils --> IOSCurveVertex
IOSSharedUtils --> IOSPipelineGrid
IOSSharedUtils --> IOSThemes
NativeChartSupport --> AndroidChartPkg
NativeChartSupport --> AndroidOOPHelpers
AndroidOOPHelpers --> AndroidLayoutCalc
AndroidOOPHelpers --> AndroidValueFormatter
AndroidOOPHelpers --> AndroidAxisManager
AndroidOOPHelpers --> AndroidHistRenderer
NativeCharts --> NLC
NativeCharts --> NCC
NativeCharts --> NALC
NativeCharts --> NBC
NativeCharts --> NHC
NativeCharts --> NLOC
NLC --> NativeChartsIOS
NLC --> NativeChartsAndroid
NCC --> NativeChartsIOS
NCC --> NativeChartsAndroid
NALC --> NativeChartsIOS
NALC --> NativeChartsAndroid
NBC --> NativeChartsIOS
NBC --> NativeChartsAndroid
NHC --> NativeChartsIOS
NHC --> NativeChartsAndroid
NLOC --> NativeChartsIOS
NLOC --> NativeChartsAndroid
ExpoRN --> SharedChartLogic
NativeCharts --> SharedChartLogic
MobilePortfolio --> RNCharts
MobilePortfolio --> GoAPIGateway
GoAPIGateway --> PortfolioAnalyticsAPI
FastAPIApp --> FastAPIStructure
FastAPIApp --> PortfolioGet
FastAPIApp --> PortfolioEndpoints
FastAPIApp --> QuotesGet
FastAPIApp --> AIMLAPI
FastAPIApp --> AnalyticsAPI
FastAPIApp --> BehaviorEvents
AnalyticsAPI --> ClickHouseDB
FastAPIApp --> SQLAlchemyStack
SQLAlchemyStack --> TimescaleDB
FastAPIApp --> RedisDB
FastAPIApp --> ClickHouseDB
FastAPIApp --> MinIOStorage
FastAPIApp --> KafkaTopic
FastAPIApp --> MarketDataServiceComponent
MarketDataServiceComponent --> KafkaQuotesTopic

AdminVite --> AppRouter
AdminVite --> Components
AdminVite --> Services
AppRouter --> Layout
AdminApp --> AnalyticsPkg
AdminApp --> UIComponent
AdminApp --> ChartLibrariesWeb
PortalApp --> AnalyticsPkg
PortalApp --> UIComponent
MobilePortfolio --> AnalyticsPkg
AnalyticsPkg --> AnalyticsProvider
AnalyticsProvider --> TrackIdentify
TrackIdentify --> AnalyticsTransport
AnalyticsTransport --> GoAPIGateway
PortalVite --> PortalRouter
PortalVite --> PortalComponents
PortalVite --> PortalTheme
BaseUI --> RadixPrimitives
ChartLibrariesWeb --> ChartJS
ChartLibrariesWeb --> AgGrid

PortfolioController --> AssetService
MarketController --> TrendService
TransactionController --> TransactionService
RiskController --> RiskService

AdminApp --> PortfolioModule
AdminApp --> MarketModule
AdminApp --> TransactionModule
AdminApp --> RiskModule
PortfolioModule --> UtilsPkg
MarketModule --> UtilsPkg
RiskModule --> UtilsPkg
PortalApp --> UtilsPkg

PortfolioModule --> HttpClient
MarketModule --> HttpClient
TransactionModule --> HttpClient
RiskModule --> HttpClient

PortfolioModule --> StateMgmt
MarketModule --> StateMgmt
TransactionModule --> StateMgmt

HttpClient --> PortfolioAnalyticsAPI
HttpClient --> ThirdPartyAPI
AdminApp --> VercelServices
PortalApp --> GoAPIGateway

PortfolioAnalyticsAPI ..> PortfolioAPI : implements
ThirdPartyAPI ..> MarketDataAPI : consumes

legend right
    |<#E3F2FD> Presentation | UI and interaction
    |<#F3E5F5> Business Layer | Core business
    |<#E8F5E9> Data Access | Data management
    |<#FFF3E0> External | Third-party services
endlegend

@enduml
